--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@smastrom/react-rating": "^1.3.1",
     "aos": "^2.3.4",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
@@ -19,6 +20,7 @@
     "react-helmet-async": "^1.3.0",
     "react-icons": "^4.9.0",
     "react-parallax": "^3.5.1",
+    "react-rating": "^2.0.5",
     "react-router-dom": "^6.12.0",
     "react-spinners": "^0.13.8",
     "sort-by": "^1.2.0",
