--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@smastrom/react-rating": "^1.3.1",
+    "@tanstack/react-query": "^4.29.12",
     "aos": "^2.3.4",
+    "axios": "^1.4.0",
     "firebase": "^9.22.1",
     "framer-motion": "^10.12.16",
     "localforage": "^1.10.0",
