--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@smastrom/react-rating": "^1.3.1",
+    "@stripe/react-stripe-js": "^2.1.0",
+    "@stripe/stripe-js": "^1.54.0",
     "@tanstack/react-query": "^4.29.12",
     "aos": "^2.3.4",
     "axios": "^1.4.0",
@@ -28,8 +30,10 @@
     "react-rating": "^2.0.5",
     "react-router-dom": "^6.12.0",
     "react-spinners": "^0.13.8",
+    "react-stripe-checkout": "^2.6.3",
     "react-toastify": "^9.1.3",
     "sort-by": "^1.2.0",
+    "stripe": "^12.9.0",
     "sweetalert2": "^11.7.11",
     "swiper": "^9.3.2",
     "tippy.js": "^6.3.7"
