--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
     "react-hook-form": "^7.69.0",
     "react-icons": "^4.9.0",
     "react-parallax": "^3.5.1",
-    "react-rating": "^2.0.5",
     "react-router-dom": "^6.12.0",
     "react-spinners": "^0.13.8",
+    "react-star-ratings": "^2.3.0",
     "react-stripe-checkout": "^2.6.3",
     "react-toastify": "^9.1.3",
     "sweetalert2": "^11.26.17",
