--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "react-stripe-checkout": "^2.6.3",
     "react-toastify": "^9.1.3",
     "sweetalert2": "^11.26.17",
-    "tippy.js": "^6.3.7"
+    "tippy.js": "^6.3.7",
+    "vite-plugin-compression": "^0.5.1"
   },
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "^7.0.2",
