--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "build": "vite build",
     "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "optimize-images": "node scripts/convert-to-webp.cjs"
+    "optimize-images": "node scripts/convert-to-webp.cjs",
+    "analyze": "vite-bundle-visualizer",
+    "lighthouse": "lighthouse http://localhost:5173 --view",
+    "build:analyze": "vite build && vite-bundle-visualizer"
   },
   "dependencies": {
     "@stripe/react-stripe-js": "^2.1.0",
@@ -18,6 +21,7 @@
     "axios": "^1.13.2",
     "firebase": "^9.22.1",
     "framer-motion": "^10.12.16",
+    "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -30,6 +34,7 @@
     "react-star-ratings": "^2.3.0",
     "react-stripe-checkout": "^2.6.3",
     "react-toastify": "^9.1.3",
+    "react-window": "^2.2.5",
     "sweetalert2": "^11.26.17",
     "tippy.js": "^6.3.7",
     "vite-plugin-compression": "^0.5.1"
@@ -48,6 +53,9 @@
     "rollup-plugin-visualizer": "^6.0.5",
     "sharp": "^0.34.5",
     "tailwindcss": "^3.4.19",
-    "vite": "^4.3.9"
+    "vite": "^4.3.9",
+    "vite-bundle-visualizer": "^1.2.1",
+    "vite-plugin-imagemin": "^0.6.1",
+    "vite-plugin-pwa": "^1.2.0"
   }
 }
